# akt-browser

./: Cargo.toml
examples/: dom.html  sample.html
src/: lib.rs  main.rs  utils.rs
src/cli/: mod.rs  open.rs  opts.rs
src/core/: css.rs  fetch.rs  html.rs  layout.rs  mod.rs  style.rs  url.rs  window.rs
src/core/dom/: document.rs  element.rs  mod.rs  node.rs  text.rs
src/javascript/: mod.rs  runtime.rs  state.rs
src/javascript/extensions/: binding.rs  document.rs  glue.js  mod.rs
src/ui/: api.rs  logger.rs  mod.rs
src/ui/components/: input.rs  link.rs  mod.rs
src/ui/render/: a.rs  input.rs  mod.rs
src/ui/views/: browser.rs  menu.rs  mod.rs  navigation.rs  page.rs
