[package]
name = "aktBrowser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
structopt = "0.3.21"
v8 = "0.41"
serde_v8 = "0.34"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
once_cell = "1"
lazy_static = "1"
combine = "4.5.2"
thiserror = "1.0"
num-traits = "0.2"
num-derive = "0.3"
url = "2.2.1"
